crosshair/examples/PEP316/bugs_detected/getattr_magic.out
getattr_magic.py:14: error: false when calling visit_animals(animal = 'cows') (which returns 'moo')
